tests/ui/recv-borrow-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/recv-borrow-endpoint-alias.rs:34:22
   |
33 |     let payload = futures::executor::block_on(endpoint.recv::<g::Msg<7, FramePayload>>()).unwrap();
   |                                               -------- first mutable borrow occurs here
34 |     let flow_again = endpoint.flow::<g::Msg<8, u8>>().unwrap();
   |                      ^^^^^^^^ second mutable borrow occurs here
35 |     core::hint::black_box(&flow_again);
36 |     core::hint::black_box(&payload);
   |                           -------- first borrow later used here
